# rust-papi

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: build.yml
examples/: counter_monitor.rs  ipc_monitor.rs  self_counter.rs
libpapi/: Cargo.toml
libpapi/examples/: counter_monitor.rs  ipc_monitor.rs  self_counter.rs
libpapi/src/: lib.rs
libpapi_sys/: Cargo.toml  bindings.rs  build.rs
libpapi_sys/src/: lib.rs
src/: counter.rs  error.rs  event.rs  event_set.rs  handler.rs  lib.rs
