[package]
name = "libpapi_sys"
version = "0.1.7"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"
build = "build.rs"
links = "papi"
license = "Apache-2.0"
description = "a simple rust binding for libpapi"

[build-dependencies]
bindgen = { version = "0.55", default-features = false, features = ["runtime", "which-rustfmt"] }
num_cpus = "1.8"

[features]
# only use for tests of CI
ci = []
